--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-icons": "^2.2.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.20",
